Overflow bug?

--- a/public/menu.css
+++ b/public/menu.css
@@ -36,7 +36,7 @@
     height: 100vh;
     width: 100vw;
 
-    overflow-y: auto;
+    overflow: hidden;
 
     background: rgba(255, 255, 255, 0.95);
     text-align: left;
